@@ -262,7 +262,9 @@ if ((file_exists($input["path_rrdtool"]["default"])) && ((CACTI_SERVER_OS == "wi
 	exec($input["path_rrdtool"]["default"], $out_array);
 
 	if (sizeof($out_array) > 0) {
-		if (ereg("^RRDtool 1\.2", $out_array[0])) {
+		if (ereg("^RRDtool 1\.3", $out_array[0])) {
+			$input["rrdtool_version"]["default"] = "rrd-1.3.x";
+		}else if (ereg("^RRDtool 1\.2\.", $out_array[0])) {
 			$input["rrdtool_version"]["default"] = "rrd-1.2.x";
 		}else if (ereg("^RRDtool 1\.0\.", $out_array[0])) {
 			$input["rrdtool_version"]["default"] = "rrd-1.0.x";
