@@ -231,7 +231,9 @@ function utilities_view_tech($php_info = "") {
 		exec(read_config_option("path_rrdtool"), $out_array);
 
 		if (sizeof($out_array) > 0) {
-			if (ereg("^RRDtool 1\.2", $out_array[0])) {
+			if (ereg("^RRDtool 1\.3", $out_array[0])) {
+				$rrdtool_version = "rrd-1.3.x";
+			}else if (ereg("^RRDtool 1\.2\.", $out_array[0])) {
 				$rrdtool_version = "rrd-1.2.x";
 			}else if (ereg("^RRDtool 1\.0\.", $out_array[0])) {
 				$rrdtool_version = "rrd-1.0.x";
@@ -245,7 +247,7 @@ function utilities_view_tech($php_info = "") {
 		$rrdtool_error .= "<br><font color='red'>ERROR: Installed RRDTool version does not match configured version.<br>Please visit the <a href='settings.php?tab=general'>Configuration Settings</a> and select the correct RRDTool Utility Version.</font><br>";
 	}
 	$graph_gif_count = db_fetch_cell("SELECT COUNT(*) FROM graph_templates_graph WHERE image_format_id = 2");
-	if (($graph_gif_count > 0) && (read_config_option("rrdtool_version") == "rrd-1.2.x")) {
+	if (($graph_gif_count > 0) && (read_config_option("rrdtool_version") != "rrd-1.0.x")) {
 		$rrdtool_error .= "<br><font color='red'>ERROR: RRDTool 1.2.x does not support the GIF images format, but " . $graph_gif_count . " graph(s) and/or templates have GIF set as the image format.</font><br>";
 	}
 
