@@ -51,6 +51,7 @@ Cacti CHANGELOG
 -feature: support using the cacti database api with more than one connection
 -feature: Add some more debug lines to Data Query debugging (Verbose Query)
 -feature: Add Data Source Type "COMPUTE" to data templates to fully support all rrdtool-1.2.x data source types
+-feature: Fix compatibility issues for RRDTool 1.3
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
