@@ -23,6 +23,7 @@ Cacti CHANGELOG
 -feature: add links to Data Template and Host Edit to Data Source Edit Screen
 -feature: support using the cacti database api with more than one connection
 -feature: Add some more debug lines to Data Query debugging (Verbose Query)
+-feature: Fix compatibility issues for RRDTool 1.3
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
